--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,17 +8,17 @@ localProperties.load(project.rootProject.file('local.properties').newDataInputSt
 
 android {
     namespace 'com.fr.iem.marvel'
-    compileSdk 32
+    compileSdk 33
 
     defaultConfig {
         applicationId "com.fr.iem.marvel"
         minSdk 23
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        buildConfigField("String", "MARVEL_PRIVATE_API_KEY",  localProperties["marvelApiKeyPrivate"])
+        buildConfigField("String", "MARVEL_PRIVATE_API_KEY",  localProperties["PRIVATE_KEY"])
     }
 
     buildTypes {
@@ -38,9 +38,13 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "com.squareup.retrofit2:retrofit:2.9.0"
+    implementation "com.squareup.retrofit2:converter-gson:2.9.0"
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
